--- a/app/styles/_variables.css
+++ b/app/styles/_variables.css
@@ -26,10 +26,10 @@ $purple: #783FEA;
 $font-size-default:    1em;
 
 /* Backgrounds */
-$background-primary:   #FAFAFA;
+$background-primary:   #F8FAFF;
 $background-secondary: #FFF;
 $background-light:     #111;
-$background-jaguar:    #FAFAFD;
+$background-jaguar:    #F8FAFF;
 
 /* Typography */
 $color-primary:        #000000;
