--- a/app/styles/elements/_notifier.css
+++ b/app/styles/elements/_notifier.css
@@ -11,6 +11,7 @@
     justify-content: center;
     flex-direction: column;
     width: 100vw;
+    height: 100%;
     padding: 5vh 20px;
     left: 0;
     z-index: 1000;
@@ -26,7 +27,7 @@
 .notifier-title-icon {
     opacity: .05;
     position: absolute;
-    transform: scale(10);
+    transform: scale(10) translateY(-10px);
     pointer-events: none;
 
 }
@@ -37,7 +38,7 @@
 }
 
 .notifier-title-text {
-    font-size: 2.8em;
+    font-size: 2.4em;
     font-weight: 200;
     margin: 0 0 .5em 0;
 }
@@ -48,14 +49,19 @@
 
 .notifier-list {
     @extend .flexColumnCenter;
+    flex-shrink: 0;
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 1.2em;
+    font-size: 1em;
+    width: 100%;
 }
 
 .notifier-list li {
+    width: 100%;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .notifier-list-close {
@@ -68,26 +74,27 @@
 
 /* animation state */
 .notifier {
-    bottom: -100vh;
+    position: absolute;
+    top: -100vh;
     transition: all .32s ease-in-out;
     will-change: all;
     overflow: hidden;
 }
 .notifier.notifier-error {
-    bottom: 0;
+    top: 0;
     background: $danger;
     box-shadow: 0px 0px 100px 100px $danger;
     color: #FFF
 }
 
 .notifier.notifier-error:before {
-    position: fixed;
+    position: absolute;
     content:"";
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     background: $danger;
-    opacity: .3;
+    opacity: .8;
     z-index: -1;
 }
