--- a/app/styles/elements/_loader.css
+++ b/app/styles/elements/_loader.css
@@ -1,16 +1,15 @@
 .loader {
-    position: fixed;
-    bottom: 0;
-    height: 100vh;
-    padding-top: 50vh;
-    width: 100%;
+    position: absolute;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
-    z-index: 2000;
-    font-size: 1.3em;
-
+    justify-content: center;
+    flex-direction: column;
+    width: 100vw;
+    height: 100%;
+    padding: 5vh 20px;
+    left: 0;
+    z-index: 1000;
+    background: #FFF;
 }
 
 .loader-svg svg {
@@ -20,13 +19,11 @@
 
 .loader .loader-wrapper {
     width: 100%;
-    padding-bottom: 10vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 200px 200px #FFF;
-    background: #FFF;
 }
 
 
@@ -40,5 +37,8 @@
     border-radius: 50%;
     list-style: none;
     animation: pulse 2s ease-in-out infinite alternate;
+    color: $blue;
+    font-size: 1.2em;
+    font-weight: 200;
 
 }
