--- a/app/styles/elements/_modal.css
+++ b/app/styles/elements/_modal.css
@@ -9,13 +9,13 @@
 .modal {
     position: fixed;
     z-index: 1000;
-    bottom: 0;
+    top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100%;
-    background: #FFF;
+    height: 100vh;
+    background: $background-jaguar;
 }
 
 .modal-header {
@@ -24,7 +24,7 @@
     height: 80px;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 10px 20px 20px;
     flex-shrink: 0;
     box-shadow:  0 6px 20px rgba(0,0,0,.04);
     z-index: 1;
@@ -35,8 +35,8 @@
     flex-grow: 1;
     font-weight: 200;
     font-size: 1.6em;
-    opacity: .2;
-    text-align: center;
+    text-align: left;
+    color: $color-dark
 
 }
 
@@ -85,8 +85,8 @@
 
 /* animation state */
 .modal {
-    bottom: -100vh;
+    top: -100vh;
     transition: all .32s ease-in-out;
     will-change: all;
 }
-.modal.modal-open { bottom: 0 }
+.modal.modal-open { top: 0 }
